[tool.poetry]
name = "jobsearch"
version = "0.1.0"
description = "Job search apps in django"
authors = ["spackle0 <spackle0@users.noreply.github.com>"]
license = "GPL 3.0"
readme = "README.md"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
combine_as_imports=true
combine_star=true
skip_gitignore=true
star_first=true

[tool.pylint.basic]
dostring-min-length=10

[tool.pylint.design]
exclude-too-few-public-methods=true

[tool.pylint.format]
max-line-length=120

[tool.pytest]
addopts="-ra --tb=short -v --capture=no --setup-show"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
decouple = "^0.0.7"


[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pytest = "^7.3.1"
pytest-mock = "^3.10.0"
flake8 = "^6.0.0"
bandit = "^1.7.5"
pylint = "^2.17.4"
black = "^23.3.0"
python-taint = "^0.42"
setuptools = "^67.7.2"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
